# app/user/api/service.go
@@ -1,0 +1,6 @@
+package user
+
+type Service interface {
+	Create(user *UserEntity) (*UserEntity, error)
+	GetByUsername(username string) (*UserEntity, error)
+}
